Fix weird text sizing issue with wrapping div on first content item

--- a/style.css
+++ b/style.css
@@ -161,6 +161,10 @@ body {
 }
 
 @media (max-width: 768px) {
+  .landscape {
+    /* background-position: left; */
+  }
+
   .logo {
     width: 100px;
   }
